# nav_simulator

./: .gitignore  .readthedocs.yaml  README.md  requirements.txt
source/: conf.py  index.rst
source/docs/: ROS_VS_ROS2.md  fork_and_pr.md  仿真器概述.md  传感器.md  写在前面.md  发布与订阅.md  可视化.md  地图.md  地图与坐标系.md  坐标系.md  工作空间.md  服务.md  环境安装.md  第一个全局路径规划器.md  第一个启动脚本.md  虚拟时钟.md  路径规划仿真一.md  路径规划仿真二.md  遥控器.md  里程计.md  里程计一.md  里程计三.md  里程计二.md  障碍物.md
source/uml/: controller.puml  costmap.puml
src/clock_node/: CMakeLists.txt  package.xml  virtual_clock.md
src/clock_node/include/: clock_node.h
src/clock_node/src/: clock_node.cpp
src/planner/: CMakeLists.txt  package.xml  planner_plugins.xml
src/planner/include/planner/: planners.hpp  straight_line.hpp  visibility_control.h
src/planner/launch/: planner.launch.py
src/planner/params/: planner.yaml
src/planner/src/: planners.cpp  straight_line.cpp
src/simulator/: CMakeLists.txt  package.xml
src/simulator/include/simulator/: transform.hpp
src/simulator/launch/: planner_simulator.launch  planner_simulator.launch.py  simulator.launch.py
src/simulator/maps/: a.pgm  a.yaml  b.pgm  b.yaml
src/simulator/rviz/: planner.rviz
src/simulator/src/: clock_node.cpp  planner_bridge.cpp  telecontrol.cpp  transform.cpp
src/telecontrol/: CMakeLists.txt  package.xml
